--- a/style-index.css
+++ b/style-index.css
@@ -6,12 +6,14 @@ html {
 
 
 body {
-    background-color: black;
+    background: linear-gradient(90deg, #171a1b, #050505);
     font-family: "Raleway", sans-serif;
     margin: 0px;
 }
 
 hr {
+    margin-left: 70px;
+    margin-right: 70px;
     margin-top: 70px;
     border-color: rgb(58, 58, 58);
 }
@@ -19,34 +21,15 @@ hr {
 header {
     scroll-behavior: smooth;
     display: flex;
-    background: linear-gradient(90deg, #151819, #101111);
+    background: linear-gradient(90deg, #151819, #050505);
     padding: 50px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, .25);
 }
 
 .logo {
-    top: 35px;
-    left: 35px;
+    top: 20px;
+    left: 20px;
     position: absolute;
-}
-
-.login {
-    box-shadow: 4px 4px 4px rgb(0, 0, 0);
-    border-color: rgb(66, 66, 66);
-    width: 60px;
-    height: 30px;
-    border-radius: 20px;
-    font-family: "raleway", sans-serif;
-    font-weight: 600;
-    position: absolute;
-    left: 95vw;
-    top: 2.7vw;
-    cursor: pointer;
-    color: rgb(228, 228, 228);
-    background-color: #f3f3f300;
-    transition: ease 1s color;
-    transition: transform 0.3s ease;
-
 }
 
 .login:hover {
@@ -57,7 +40,7 @@ header {
 
 nav ul {
     text-align: center;
-    background: linear-gradient(90deg, #101111, #0a0a0a);
+    background: #0d0f0f;
     padding: 10px;
     position: center;
     list-style-type: none;
@@ -66,7 +49,7 @@ nav ul {
 
 nav ul li {
     font-family: "raleway", sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     margin-left: 36px;
     display: inline;
@@ -74,51 +57,188 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #f3f3f3;
+    color: #f3f3f388;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
-    color: #eb155b;
+    color: #eb155c;
 }
 
-
-.video1 {
-    width: 1000px;
-    box-shadow: 0px 0px 25px #eb155c;
-    border-radius: 20px;
-    margin-top: 70px;
-    margin-left: 450px;
-}
-
-.the-news {
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.titulo h1 {
+.titulo-destaque h1 {
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #eb155b;
+    -webkit-text-stroke-color: #eb155c;
     font-family: "raleway", sans-serif;
     color: #ffffff00;
     font-size: 50px;
-    margin: 80px;
+    margin-top: 60px;
+    margin-left: 130px;
+}
+
+
+.texto-destaque h2 {
+    color: #f3f3f3;
+    margin-top: 130px;
+    margin-left: 160px;
+    margin-right: 1350px;
+    line-height: 30px;
+    font-family: "raleway", sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+}
+
+.texto-destaque p {
+    margin-left: -19px;
+    margin-right: -50px;
+    color: #eb155c;
+    margin-top: 40px;
+    line-height: 30px;
+    font-family: "raleway", sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+.botao-inscrever-se {
+    margin-left: 200px;
+    background-color: #eb155c;
+    margin-top: 10px;
+    color: #f3f3f3;
+    border-color: #00000000;
+    box-shadow: 0px 0px 10px 2px #000000;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 20px;
+    width: 300px;
+    height: 50px;
+    transition: trasform, 0.4s ease;
+}
+
+.botao-inscrever-se:hover {
+    transform: scale(1.1);
+}
+
+.video1 {
+    position: relative;
+    width: 1000px;
+    height: 495px;
+    box-shadow: 0px 0px 80px 10px #ffffff27;
+    border-radius: 20px;
+    margin-top: -370px;
+    margin-left: 750px;
+}
+
+.titulo-next h1 {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #eb155c;
+    font-family: "raleway", sans-serif;
+    color: #ffffff00;
+    font-size: 50px;
+    margin-top: 60px;
+    margin-left: 130px;
+}
+
+.titulo-next h2 {
+    position: absolute;
+    color: #535353da;
+    margin-top: -30px;
+    margin-left: 130px;
+    font-family: "raleway", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.conteudo-next {
+    margin-right: 100px;
+}
+
+.conteudo-next h1 {
+    font-size: 40px;
+    margin-top: 100px;
+    margin-left: 160px;
+    color: #f3f3f3;
+}
+
+.conteudo-next h2 {
+    color: #f3f3f3;
+    margin-top: 20px;
+    margin-left: 160px;
+    font-family: "raleway", sans-serif;
+    font-weight: 400;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.conteudo-next h3 {
+    position: absolute;
+    color: #f3f3f3;
+    margin-top: 20px;
+    margin-left: 160px;
+    margin-right: 1300px;
+    font-family: "raleway", sans-serif;
+    font-weight: 400;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.conteudo-next h4 {
+    color: #f3f3f3;
+    margin-top: 20px;
+    margin-left: 160px;
+    margin-right: 900px;
+    font-family: "raleway", sans-serif;
+    font-weight: 400;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.video-next {
+    width: 1000px;
+    height: 560px;
+    box-shadow: 0px 0px 80px 10px #ffffff27;
+    border-radius: 20px;
+    margin-top: -50px;
+    margin-left: 750px;
+}
+
+.img-destaque img {
+    box-shadow: 0px 0px 80px 10px #ffffff07;
+    position: absolute;
+    margin-top: -550px;
+    border-radius: 20px;
+    margin-left: 1050px;
+}
+
+
+
+
+
+
+
+.titulo-the-news h1 {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #eb155c;
+    font-family: "raleway", sans-serif;
+    color: #ffffff00;
+    font-size: 50px;
+    margin-top: 80px;
+    margin-left: 130px;
 }
 
 .noticias h1 {
     font-family: "raleway", sans-serif;
     font-weight: 800;
     color: #f3f3f3;
-    margin-left: 40px;
+    margin-left: 90px;
     font-size: 35px;
+    margin-top: 50px;
 }
 
 .noticias h2 {
     font-family: "raleway", sans-serif;
     font-weight: 700;
     color: #f3f3f3;
-    margin-left: 60px;
+    margin-left: 110px;
     font-size: 25px;
 }
 
@@ -126,7 +246,7 @@ nav ul li a:hover {
     font-family: "raleway", sans-serif;
     font-weight: 400;
     color: #f3f3f3;
-    margin-left: 60px;
+    margin-left: 110px;
     font-size: 20px;
 }
 
@@ -134,7 +254,7 @@ nav ul li a:hover {
     font-family: "raleway", sans-serif;
     font-weight: 400;
     color: #757575;
-    margin-left: 40px;
+    margin-left: 90px;
     font-size: 15px;
 }
 
@@ -145,7 +265,7 @@ nav ul li a:hover {
     cursor: pointer;
     font-size: 17px;
     margin-top: -20px;
-    margin-left: 50px;
+    margin-left: 100px;
 }
 
 .likes-contagem {
@@ -158,7 +278,7 @@ nav ul li a:hover {
 
 footer {
     font-family: "raleway", sans-serif;
-    background: #000;
+    background: #00000000;
     color: #f3f3f3;
     padding: 50px 0;
     font-size: 50px;
@@ -199,9 +319,4 @@ footer p {
 .icones img {
     width: 40px;
     height: 40px;
-    transition: 1s;
-}
-
-.icones img:hover {
-    transform: scale(1.5);
 }
